--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
-@import 'animate.css/animate.min.css';
+
 
 html,
 body {
@@ -13,74 +13,25 @@ body {
   font-weight: 300;
 }
 
-.logo-nav {
-  width: 7%;
-}
-.search {
-  padding-right: 50px;
-}
-.form-control {
-  width: 200px;
-  background-image:url(./assets/images/search.svg);
-  background-repeat: no-repeat;
-  background-position: 90%;
-  background-color: #020202;
-  backface-visibility: visible;
-}
-.navbar-collapse {
-  padding-left: 30px;
-}
-.navbar {
-  box-shadow: 1px 0px 4px;
-}
-.actions-icons li {
-  list-style-type: none;
-}
-.actions-icons {
-  display: flex;
-  padding-right: 30px;
-  justify-content: flex-end;
-}
-.user-icons  {
-  list-style: none;
-  align-items: stretch;
-  display: flex;
-  position: relative;
-  gap: 15px;
-}
+
 main {
   margin-top: 3px;
 }
-.card-movies {
-  display: grid;
-    justify-content: center;
-    justify-items: center;
-    grid-template-columns: 1rem 1rem 1rem 1rem;
-    grid-template-rows: 25rem;
-    gap: 85px 300px;
-}
+/* .paginator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 56px;
+  padding: 0 8px;
+  flex-wrap: wrap-reverse;
+  width: 100%;
+} */
 
-.title-card-movies {
-  margin-top: 12px;
-  margin-left: 46px;
-}
-/*button {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  background: none;
-  font-size: 100%;
-  vertical-align: baseline;
-  font-family: inherit;
-  font-weight: inherit;
-  color: inherit;
-  -webkit-appearance: none;
-  appearance: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}*/
 
 
 :focus {
   outline: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
