--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,134 +1,9 @@
+<app-header></app-header>
+
 <div class="logo-welcome" id="logo">
     <img class="logo-welcome rounded mx-auto d-block animate__animated animate__fadeIn"
         src="./../../../assets/images/GOU!.svg" alt="">
 </div>
-<header>
 
-    <nav class="navbar navbar-expand-lg  nav-bar" data-bs-theme="dark">
-        <div class="container-fluid">
-            <img class="logo-nav" src="./../../../assets/images/GOU!.svg" alt="">
-
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            PELÍCULAS
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            SERIES
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        </div>
-
-    </nav>
-
-    <main>
-        <section>
-            <div id="carouselExampleCaptions" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./../../../assets/images/img.main.svg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-    </main>
-    <h3 class="title-card-movies">Nuevos titulos, revive los clasicos !</h3>
-    <section class="card-movies">
-
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="./../../../assets/images/card.example.svg" class="card-img-top" alt="...">
-            <figure>Luna Nueva 2009</figure>
-        </div>
-
-
-    </section>
-
-
-
-
-</header>
+<app-main></app-main>
+<app-card-movies></app-card-movies>
