--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,8 @@
 <app-header></app-header>
 
-<div class="logo-welcome" id="logo">
-    <img class="logo-welcome rounded mx-auto d-block animate__animated animate__fadeIn"
-        src="./../../../assets/images/GOU!.svg" alt="">
-</div>
-
-<app-main></app-main>
-<app-card-movies></app-card-movies>
+<section>
+    <app-carousel></app-carousel>
+</section>
+<main>
+    <app-card-movies></app-card-movies>
+</main>
