--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,9 @@ main {
   width: 100%;
 } */
 
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  filter: invert(108%);
+}
 
 
 :focus {
