--- a/src/app/components/card-movies/card-movies.component.html
+++ b/src/app/components/card-movies/card-movies.component.html
@@ -2,7 +2,8 @@
     <!-- Utilizamos *ngFor para iterar sobre las películas en moviesData -->
     <div *ngFor="let movie of moviesData" class="card">
         <img [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path" alt="">
-        <figcaption class="mat-caption">{{ movie.title }} {{ movie.release_date }}</figcaption>
+        <figcaption class="mat-caption text-center">{{ movie.title }} {{ movie.release_date | date:"yyyy" }}
+        </figcaption>
     </div>
 </div>
 
