--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
 
 <main>
-    <div class="container">
-        <div class="col-md-2 offset-md-10 mt-2">
-            <select id="order-selector" class="form-select form-select-sm" (change)="orderMovies($event)">
-                <option value="">Default</option>
-                <option value="1">Order by A-Z</option>
-                <option value="2">Order by Z-A</option>
-            </select>
-        </div>
+    <div class="container-fluid">
+
+        <select id="order-selector" class="form-select form-select-sm" (change)="orderMovies($event)">
+            <option value="">select order</option>
+            <option value="1">Order by A-Z</option>
+            <option value="2">Order by Z-A</option>
+        </select>
+
     </div>
     <div class="card-movies container">
         <!-- Utilizamos *ngFor para iterar sobre las películas en moviesData -->
