--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,7 @@
 .logo-nav {
     width: 7%;
+    margin-left: 50px;
+    cursor: pointer;
   }
 .search {
     padding-right: 50px;
@@ -12,8 +14,12 @@
     background-color: #020202;
     backface-visibility: visible;
   }
-
-.navbar-collapse {
+  .container-nav {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  .navbar-collapse {
     padding-left: 30px;
   }
   .navbar {
@@ -33,4 +39,15 @@
     display: flex;
     position: relative;
     gap: 15px;
+  }
+  .dropdown-menu.show {
+    background-color: black;
+    width: 800px;
+  }
+  .dropdown-menu.show ul li {
+    list-style: none;
+  }
+  .dropdown-menu.show ul li a.dropdown-item:hover {
+    background-color: #000 !important;
+    color: #03a678;
   }
