--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <!-- Contenido del header común -->
     <nav class="navbar navbar-expand-lg  nav-bar" data-bs-theme="dark">
-        <img class="logo-nav" src="./../../../assets/images/GOU!.svg" alt="">
-        <div class="container-fluid">
+        <img class="logo-nav" src="./../../../assets/images/GOU!.svg" alt="" (click)="goHome()">
+        <div class="container-nav">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -11,21 +11,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            GENEROS
+                            CATEGORÍAS
                         </a>
                         <ul class="dropdown-menu">
-                            <li *ngFor="let genre of moviesGenres">
-                                <a class="dropdown-item" routerLink="/category/{{ genre.id }}">{{ genre.name }}</a>
-                            </li>
+                            <div class="row">
+                                <div class="col-md-4" *ngFor="let item of genresSeparates">
+                                    <ul>
+                                        <li *ngFor="let genre of item;">
+                                            <a class="dropdown-item" routerLink="/category/{{ genre.id }}">
+                                                {{ genre.name }}
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </ul>
                     </li>
                 </ul>
             </div>
+            <div class="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            </div>
         </div>
-
-        <div class="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        </div>
-
     </nav>
 </header>
