--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,12 @@ main {
   filter: invert(108%);
 }
 
-
+figcaption.mat-caption {
+  font-weight: 100;
+  margin-right: 20px;
+  margin-left: 15px;
+  color: rgb(253, 245, 245);
+}
 :focus {
   outline: 0;
 }
