--- a/src/app/components/card-movies/card-movies.component.html
+++ b/src/app/components/card-movies/card-movies.component.html
@@ -3,12 +3,15 @@
         <option value="">select order</option>
         <option value="1">Order by A-Z</option>
         <option value="2">Order by Z-A</option>
+        <option value="3">Order by desc</option>
+        <option value="4">Order by asc</option>
     </select>
 </div>
 <div class="card-movies container">
     <!-- Utilizamos *ngFor para iterar sobre las películas en moviesData -->
     <div *ngFor="let movie of moviesData" class="card">
-        <img (click)="onImageClick(movie.id)" [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path" alt="">
+        <img (click)="onImageClick(movie.id)"
+            [src]="movie.poster_path ? 'https://image.tmdb.org/t/p/w500/' + movie.poster_path : defaultImg" alt="">
         <figcaption class="mat-caption text-center">{{ movie.title }} {{ movie.release_date | date:"yyyy" }}
         </figcaption>
     </div>
