--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -2,12 +2,12 @@
 
 <div class="details-movie">
     <div class="title">
-        <h1>{{ movieData.original_title }} - {{ movieData.release_date | date:"(yyyy)" }}</h1>
-        <p>{{movieData.release_date}} </p>
-        <p *ngFor="let item of movieData.genres">{{item.name}}</p>
+        <h1>{{ movieData.original_title }} {{ movieData.release_date | date:"(yyyy)" }}</h1>
+        <p>Fecha de estreno: {{movieData.release_date | date:"(dd-MM-yy)"}} </p>
+        <p class="generos" *ngFor="let item of movieData.genres"> {{item.name}} </p>
         <hr>
-        <p class="valoracion">Promedio valoracion: <strong>{{movieData.vote_average}}</strong> Total de votos:
-            <strong>{{movieData.vote_count}}</strong>
+        <p class="valoracion"> Promedio valoracion: <strong> {{movieData.vote_average}} </strong> Total de votos:
+            <strong> {{movieData.vote_count}} </strong>
         </p>
         <div class="sinopsis">
             <h1>Sinopsis</h1>
