--- a/src/app/components/card-movies/card-movies.component.css
+++ b/src/app/components/card-movies/card-movies.component.css
@@ -1,37 +1,41 @@
-.card-movies{
-margin-top: 70px;
+.card-movies {
+  margin-top: 70px;
 }
 
-.card{
-   width: 18rem;
-   height: 30rem;
-   border: none;
-   background-color: black;
+.card {
+  width: 18rem;
+  height: 30rem;
+  border: none;
+  background-color: black;
 }
 .card-movies {
-    display: grid;
-      justify-content: center;
-      justify-items: center;
-      grid-template-columns: 1rem 1rem 1rem 1rem;
-      gap: 85px 300px;
-  }
-  mat-paginator {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    min-height: 56px;
-    padding: 0 8px;
-    flex-wrap: wrap-reverse;
-    width: 100%;
-    background-color: black;
-  }
-  .form-select {
-    width: fit-content;
-  }
-  .container-fluid {
-    display: flex;
-    justify-content: flex-end;
-    width: 90%;
-    margin-top: 20px;
-  }
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-columns: 1rem 1rem 1rem 1rem;
+  gap: 85px 300px;
+}
+mat-paginator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  min-height: 56px;
+  padding: 0 8px;
+  flex-wrap: wrap-reverse;
+  width: 100%;
+  background-color: black;
+}
+.form-select {
+  width: fit-content;
+}
+.container-fluid {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+  margin-top: 20px;
+}
+.img-card {
+  border-radius: 12px;
+  height: inherit;
+}
