--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,9 +3,6 @@
   margin-left: 50px;
   cursor: pointer;
 }
-.search {
-  padding-right: 50px;
-}
 .form-control {
   width: 200px;
   background-image: url(./../../../assets/images/search.svg);
@@ -23,7 +20,7 @@
   padding-left: 30px;
 }
 .navbar {
-  box-shadow: 1px 0px 4px;
+  border-bottom: 1px solid rgb(64, 63, 63);
 }
 .actions-icons li {
   list-style-type: none;
